@@ -13,6 +13,7 @@ SIGNIFICANT USER-VISIBLE CHANGES
 BUG
    - Fix bugs when only one sample is processed (#161)
    - Fix bug in gene type element for Droso genome
+   - Fix bug when --stranded is forced (#162)
 
 ***************************************
 version-4.0.1
